tests/fixtures/errors/e0110_support/other.mimz
module Fifo {
  out z: bit
  z = 0
}
